--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libkrb5admin-perl
 Section: perl
 Priority: optional
-Build-Depends: debhelper (>= 7), perl
+Build-Depends: debhelper (>= 7), perl, swig
 Maintainer: elric <elric@>
 Standards-Version: 3.8.3
 Homepage: http://oskt.secure-endpoints.com/krb5_admin
