Better to have elric@imrryr.org rather than elric@ for the maintainer.

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: libkrb5admin-perl
 Section: perl
 Priority: optional
 Build-Depends: debhelper (>= 7), perl, swig
-Maintainer: elric <elric@>
+Maintainer: elric <elric@imrryr.org>
 Standards-Version: 3.8.3
 Homepage: http://oskt.secure-endpoints.com/krb5_admin
 
