Change realms to fictional ones.  Always point to our test kdb.  Fix fallout.

--- a/t/krb5.conf
+++ b/t/krb5.conf
@@ -1,15 +1,15 @@
 [libdefaults]
-	default_realm = IMRRYR.ORG
+	default_realm = TEST.REALM
 
 [realms]
-	IMRRYR.ORG = {
-		kdc = kdc1.imrryr.org
-		kdc = kdc2.imrryr.org
-		kdc = kdc3.imrryr.org
-		kdc = kdc4.imrryr.org
-		kdc = kdc5.imrryr.org
-		kdc = kdc6.imrryr.org:88
-		kdc = kdc7.imrryr.org:1888
-		kdc = kdc8.imrryr.org:1988
-		kdc = kdc9.imrryr.org:2088
+	TEST.REALM = {
+		kdc = kdc1.test.realm
+		kdc = kdc2.test.realm
+		kdc = kdc3.test.realm
+		kdc = kdc4.test.realm
+		kdc = kdc5.test.realm
+		kdc = kdc6.test.realm:88
+		kdc = kdc7.test.realm:1888
+		kdc = kdc8.test.realm:1988
+		kdc = kdc9.test.realm:2088
 	}
