Stop logging when we're testing.
This can be problematic if you run the tests on the KDC.

--- a/t/krb5.conf
+++ b/t/krb5.conf
@@ -12,4 +12,8 @@
 		kdc = kdc7.test.realm:1888
 		kdc = kdc8.test.realm:1988
 		kdc = kdc9.test.realm:2088
+		log_file = /dev/null
 	}
+
+[logging]
+	default = FILE=/dev/null
