Avoid defaulting to system master key in tests

--- a/t/krb5.conf
+++ b/t/krb5.conf
@@ -15,5 +15,11 @@
 		log_file = /dev/null
 	}
 
+[kdc]
+	database = {
+		dbname = db:t/test-hdb
+		mkey_file = t/test-mkey
+	}
+
 [logging]
 	default = FILE=/dev/null
