Update t/krb5.conf to allow a KDC to be run on 127.0.0.1:1988.
Out with the leg warmers, it's 1988.  We update our test krb5.conf to
allow a KDC against the local database in preparation for testing
Krb5Admin::Krb5Host.  As we add 127.0.0.1:1988 to list of kdcs that
TEST.REALM supports, we must update getkdc.t to expect it.  We also
moving the log_file directive from [realms] TEST.REALM to the [kdc]
section where it belongs as a drive-by.

--- a/t/krb5.conf
+++ b/t/krb5.conf
@@ -3,6 +3,7 @@
 
 [realms]
 	TEST.REALM = {
+		kdc = 127.0.0.1:1988
 		kdc = kdc1.test.realm
 		kdc = kdc2.test.realm
 		kdc = kdc3.test.realm
@@ -12,14 +13,17 @@
 		kdc = kdc7.test.realm:1888
 		kdc = kdc8.test.realm:1988
 		kdc = kdc9.test.realm:2088
-		log_file = /dev/null
 	}
 
 [kdc]
+	ports = 1988
+	addresses = 127.0.0.1
 	database = {
 		dbname = db:t/test-hdb
 		mkey_file = t/test-mkey
+		log_file = /dev/null
 	}
 
 [logging]
-	default = FILE=/dev/null
+	default = FILE=/dev/stderr
+	kdc = FILE=/dev/stderr
