--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,12 @@ Makefile
 Makefile.old
 blib/
 pm_to_blib
-t/sqlite.db
-t/test-hdb.db
+t/ca.pem
+t/kdc.pem
 t/keytabs/
+t/krb5.conf
 t/krb5host.lock/
+t/sqlite.db
 t/sqlite.db-shm
 t/sqlite.db-wal
+t/test-hdb.db
