update t/krb5_keytab.conf to use new parameters $ktdir and $lockdir.

--- a/t/krb5_keytab.conf
+++ b/t/krb5_keytab.conf
@@ -52,3 +52,5 @@ $default_krb5_lib = 'mitkrb5/1.4';
 	'sunjdk/1.6'		=> [ 'ascending' ],
 );
 
+$ktdir   = './t/keytabs';
+$lockdir = './t/krb5host.lock';
