t/krb5.conf.in: add some logs for the krb5 setup, kdc and default.

--- a/t/krb5.conf.in
+++ b/t/krb5.conf.in
@@ -32,8 +32,8 @@
 	allow-anonymous = true
 
 [logging]
-	default = FILE=/dev/null
-	kdc = FILE=/dev/null
+	default = FILE=./t/krb5-default-logs
+	kdc = FILE=./t/krb5-kdc-logs
 
 [domain_realm]
 	__HOSTNAME__ = TEST.REALM
