--- a/debian/control
+++ b/debian/control
@@ -1,19 +1,19 @@
 Source: libkrb5admin-perl
 Section: perl
 Priority: optional
-Build-Depends: debhelper (>= 7), perl, swig, sqlite3, libdbi-perl, libdbd-sqlite3-perl, knc, libkharon-perl
+Build-Depends: debhelper (>= 7), dh-autoreconf, perl, swig, sqlite3, libdbi-perl, libdbd-sqlite3-perl, heimdal, knc, libkharon-perl
 Maintainer: elric <elric@imrryr.org>
 Standards-Version: 3.8.3
 Homepage: http://oskt.secure-endpoints.com/krb5_admin
 
 Package: libkrb5admin-perl
 Architecture: any
-Depends: ${perl:Depends}, ${shlibs:Depends}, ${misc:Depends}, perl-modules, libdbi-perl, libdbd-sqlite3-perl, knc, libkharon-perl
+Depends: ${perl:Depends}, ${shlibs:Depends}, ${misc:Depends}, heimdal, perl-modules, libdbi-perl, libdbd-sqlite3-perl, knc, libkharon-perl
 Description: Kerberos administration framework
  Kerberos administration framework
 
 Package: libkrb5admin-perl-kdc
 Architecture: any
-Depends: ${perl:Depends}, ${shlibs:Depends}, ${misc:Depends}, perl-modules, libdbi-perl, libdbd-sqlite3-perl, knc, libkharon-perl
+Depends: ${perl:Depends}, ${shlibs:Depends}, ${misc:Depends}, heimdal, perl-modules, libdbi-perl, libdbd-sqlite3-perl, knc, libkharon-perl, postfix
 Description: Kerberos administration framework code for only the kdc
  Kerberos administration framework the parts that go on the kdc 
