Deal with constructing /var/spool/keytabs/root -> /etc/krb5.keytab better.
So, this is interesting.  Basically, we note that we should actually
use ../.. paths for this as these work both with -R in testing and
-R as used to provision keytabs on disk images which are expected
to be root.  We update the tests to match.

--- a/t/krb5.conf.in
+++ b/t/krb5.conf.in
@@ -3,7 +3,7 @@
 
 [libdefaults]
 	default_realm = TEST.REALM
-	default_keytab_name = FILE:./t/keytabs/root
+	default_keytab_name = FILE:./t/rootdir/etc/krb5.keytab
 	use_rdns = false
 	dns_lookup_realm = false
 	dns_lookup_kdc = false
