--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libkrb5admin-perl
 Section: perl
 Priority: optional
-Build-Depends: debhelper (>= 7), dh-autoreconf, perl, swig, sqlite3, libdbi-perl, libdbd-sqlite3-perl, heimdal, knc, libkharon-perl
+Build-Depends: debhelper (>= 7), dh-autoreconf, perl, swig, sqlite3, libdbi-perl, libdbd-sqlite3-perl, heimdal, opt-heimdal-dev, knc, libkharon-perl
 Maintainer: elric <elric@imrryr.org>
 Standards-Version: 3.8.3
 Homepage: http://oskt.secure-endpoints.com/krb5_admin
