Provide basic support of derived key namespaces.

--- a/t/krb5_keytab.conf
+++ b/t/krb5_keytab.conf
@@ -54,4 +54,8 @@ $default_krb5_lib = 'mitkrb5/1.4';
 
 $lockdir = './t/krb5host.lock';
 
+$ktdir = './t/rootdir/var/spool/keytabs';
 $testing = 1;
+$local = 1;
+$kmdb_config = './t/krb5_admind.conf';
+$kmdb_config_provided = 1;
